commit in count

--- a/index.html
+++ b/index.html
@@ -410,6 +410,7 @@
     </div>
     <!-- Portfolio End -->
 
+    <!-- Counter Facts Start -->
     <div class="container-fluid counter-facts py-6">
         <div class="container py-5">
             <div class="row g-4">
